@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+07-May-2010 Ian MacLennan
+# Fixed error in JString::strspn that caused unit tests to fail on systems without mbstring
+
 07-May-2010 Jean-Marie Simonet
 $ Consolidated some strings
 # Fixing installation issue _ Thank you Dennis Hermatski
